[gd_scene load_steps=16 format=3 uid="uid://81f0sipsuncf"]

[ext_resource type="Script" path="res://Scripts/Sidebar.gd" id="1_aji4t"]
[ext_resource type="Texture2D" uid="uid://dsqfs781mmy0s" path="res://Sprites/shopping list/Task_List.png" id="2_s2msw"]
[ext_resource type="FontFile" uid="uid://cjo7ruxa3exmq" path="res://Fonts/PeaberryMono.ttf" id="3_mtxj2"]
[ext_resource type="Texture2D" uid="uid://cbiy86leth6u6" path="res://Sprites/shopping list/updownbutton.png" id="5_67cms"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ls2al"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gd4ie"]
texture = ExtResource("2_s2msw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wy5oo"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_oc6co"]
color = Color(0.858645, 0.739642, 0.618001, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8y2n2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4n480"]
bg_color = Color(0.980392, 0.909804, 0.8, 1)
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.980392, 0.909804, 0.8, 1)
border_blend = true
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="AtlasTexture" id="AtlasTexture_fdshp"]
atlas = ExtResource("5_67cms")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_j16wo"]
atlas = ExtResource("5_67cms")
region = Rect2(0, 0, 8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqqha"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uayl5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl00d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Shopping_List" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ls2al")
script = ExtResource("1_aji4t")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="InnerMenu" type="Panel" parent="MarginContainer/Menu"]
texture_filter = 1
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gd4ie")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Menu/InnerMenu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wy5oo")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 40)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
localize_numeral_system = false
theme_override_colors/font_color = Color(0.607843, 0.447059, 0.34902, 1)
theme_override_colors/font_outline_color = Color(0.482353, 0.298039, 0.235294, 1)
theme_override_fonts/font = ExtResource("3_mtxj2")
text = "Grandma's Shopping List"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_oc6co")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8y2n2")

[node name="Explanation" type="Label" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.760784, 0.627451, 0.509804, 1)
theme_override_fonts/font = ExtResource("3_mtxj2")
text = "Iâ€™ve lost my butter knife, and really want to butter up my bread. Could you buy me one from the store? "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_oc6co")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="listMenu" type="GridContainer" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="Week" type="Label" parent="MarginContainer/Menu/InnerMenu/VBoxContainer2"]
z_index = 1
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.482353, 0.298039, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.607843, 0.447059, 0.34902, 1)
theme_override_fonts/font = ExtResource("3_mtxj2")
text = "Week 1"
horizontal_alignment = 1

[node name="Tab" type="HBoxContainer" parent="MarginContainer/Menu"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PullDownTab" type="Panel" parent="MarginContainer/Menu/Tab"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_4n480")

[node name="ArrowUp" type="TextureRect" parent="MarginContainer/Menu/Tab/PullDownTab"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_fdshp")
expand_mode = 2
stretch_mode = 4

[node name="ArrowDown" type="TextureRect" parent="MarginContainer/Menu/Tab/PullDownTab"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j16wo")
expand_mode = 2
stretch_mode = 4

[node name="OpenListMenu" type="Button" parent="MarginContainer/Menu/Tab/PullDownTab"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_tqqha")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uayl5")
theme_override_styles/normal = SubResource("StyleBoxFlat_fl00d")
action_mode = 0

[connection signal="pressed" from="MarginContainer/Menu/Tab/PullDownTab/OpenListMenu" to="." method="_on_open_list_menu_pressed"]
